# Physio_Data

./: .gitignore  PLAN.md  README.md  pyproject.toml
datasets/: TEMPLATE_API.md
datasets/emory/: API.md
datasets/mcmed/: API.md
datasets/mimic3/: API.md
datasets/mover/: API.md
datasets/mover_epic/: API.md
datasets/ucsf/: API.md
datasets/vitaldb/: API.md
examples/mimic3/: API.md
indices/: var_registry.json
physio_data/: __init__.py  ehr_trajectory.py  schema.py
skill/: SKILL.md
templates/: TEMPLATE_API.md
torch_dataset_loader/: README.md  __init__.py  canonical.py  dataset.py  multi.py  windowing.py
workzone/: README.md  check_resources.py  setup_env.sh
workzone/common/: build_estimation_task.py
workzone/configs/: server_paths.yaml
workzone/emory/: migrate_cvp_115_to_107.py  stage_a_cohort.py  stage_b_wave.py  stage_c_vitals.py  stage_d_ehr.py  stage_e_assemble.py  stage_f_demographics.py  stage_f_manifest.py  stage_g_sepsis.py
workzone/mcmed/: README.md  stage1_scan_npz.py  stage2_extract_ehr.py  stage3_convert_to_canonical.py  stage4_manifest_splits.py  stage_a_cohort.py  stage_b_wave.py  stage_c_vitals.py  stage_d_labs.py  stage_e_assemble.py  stage_f_demographics.py  stage_f_manifest.py
workzone/mimic3/: download_subset_32.sh  post_demographics.py  post_sepsis_cohort.py  post_sepsis_trajectory.py  run_full_pipeline.sh  run_trajectory_update.sh  select_subset_32.py  sepsis_patient_list.csv  stage1_scan_records.py  stage2_extract_ehr.py  stage2b_cross_check.py  stage3_extract_waveforms.py  stage3b_extract_actions.py  step0_explore.py  (+5 more)
(+76 files in other folders)
