[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "physio-data"
version = "0.1.0"
description = "Canonical format and preprocessing for physiological time-series datasets"
requires-python = ">=3.10"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
preprocessing = ["polars>=1.0", "pyarrow>=15.0", "scipy>=1.12", "wfdb>=3.4"]

[tool.setuptools.packages.find]
include = ["physio_data*"]
